# LC-3-Rust

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docs.md  rijk.asm  split  split.c  test.in
examples/: bootstrap.asm
src/: main.rs
src/hardware/: mod.rs
src/hardware/instruction/: mod.rs
src/hardware/register/: mod.rs
src/hardware/vm/: mod.rs
