[package]
name = "LC-3"
version = "0.2.1"
authors = ["Rodrigo Araujo <rod.dearaujo@gmail.com>", "Alex Procelewski <alexprocelewski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
termios = "0.3.1"
structopt = "0.3.22"